aws-kubernetes/aws-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: nutrition
  labels:
    app.kubernetes.io/name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: react-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: shaiva/nutrition-app-front:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 10
          #   periodSeconds: 30
