aws-kubernetes/aws-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
  namespace: nutrition
  labels:
    app.kubernetes.io/name: flask-backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  selector:
    app.kubernetes.io/name: flask-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
